--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Your code here -->
   
-  <img src=
+  <img src=https://dw9to29mmj727.cloudfront.net/properties/2016/432-SeriesThumbnails_SM__400x320.jpg alt="sailor moon saluting you" title=
 
 </body>
 </html>
