automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
   <!-- Your code here -->
   
-  <img src=https://dw9to29mmj727.cloudfront.net/properties/2016/432-SeriesThumbnails_SM__400x320.jpg alt="sailor moon saluting you" title="In the name of the moon, I'll punish you!">
+  <img src=https://dw9to29mmj727.cloudfront.net/properties/2016/432-SeriesThumbnails_SM__400x320.jpg>
 
+  <img src=https://dw9to29mmj727.cloudfront.net/properties/2016/432-SeriesThumbnails_SM__400x320.jpg alt="sailor moon saluting you">
+   
+  <img src=https://dw9to29mmj727.cloudfront.net/properties/2016/432-SeriesThumbnails_SM__400x320.jpg alt="sailor moon saluting you" title="In the name of the moon, I'll punish you!">
+  
 </body>
 </html>
